# onedrive-connect

./: .env.example  CHANGELOG.md  README.md  REQUIREMENTS.md  SKILL.md  auth_helper.py  example_usage.py  pyproject.toml  requirements-auth.txt  setup.cfg  skill_manifest.json
onedrive_skill/: __init__.py  onedrive_client.py
